<resources>
    <string name="app_name">Ejemplo01</string>
    <string name="volver">Volver</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingres_tus_credenciales_para_continuar">Ingresá tus credenciales para continuar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_ten_s_cuenta_registrate_aqu">¿No tenés cuenta? Registrate aquí</string>
    <string name="consultorios_mendoza">Consultorios Mendoza</string>
    <string name="tu_salud_nuestra_prioridad_ngestion_tus_turnos_m_dicos_de_forma_simple">Tu salud, nuestra prioridad.\nGestioná tus turnos médicos de forma simple.</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="_2025_consultorios_mendoza">© 2025 Consultorios Mendoza</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_mis_turnos">Mis Turnos</string>
    <string name="menu_buscar_medicos">Buscar Medicos</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>