<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_mis_turnos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mis_turnos" />
        <item
            android:id="@+id/nav_buscar_medicos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_buscar_medicos"/>
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cerrar_sesion"
            />
    </group>
</menu>